# youtube-question-generation

./: .pre-commit-config.yaml  .yamllint.yml  Dockerfile  Makefile  README.md  codeconv.yml  crawler.py  docker-compose.yml  lint.yml  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/: CODEOWNERS  labels.yml
.github/workflows/: ci.yaml  codecov.yml  lint.yml  publish.yaml  run-pytest.yml  super-linter.yml
app/: confirm_button_hack.py  frontend.py  main.py  model.py
app/mask_task/: config.yaml
src/: __main__.py  database.py  emb.py  main.py  model.py
src/tests/: test_main.py
test/: test.py
youtube_crawer/: subtitles.txt  youtube_text.ipynb
